name:                skylighting-format-latex
version:             0.1
synopsis:            LaTeX formatter for skylighting syntax highlighting library
description:         This module allows tokens produced by skylighting-core
                     to be rendered as LaTeX macros.
homepage:            https://github.com/jgm/skylighting
license:             BSD3
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
copyright:           (C) 2016-2022 John MacFarlane
category:            Text
build-type:          Simple
extra-source-files:  README.md

cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/jgm/skylighting.git

library
  exposed-modules:     Skylighting.Format.LaTeX
  other-extensions:    CPP
  build-depends:       base >= 4.8 && < 5.0,
                       skylighting-core,
                       text,
                       containers
  hs-source-dirs:      src
  ghc-prof-options:    -fprof-auto-exported
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.4)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:      -Wunused-packages
