name:                skylighting
version:             0.8.2.1
synopsis:            syntax highlighting library
description:         Skylighting is a syntax highlighting library with
                     support for over one hundred languages.  It derives
                     its tokenizers from XML syntax definitions used
                     by KDE's KSyntaxHighlighting framework, so any
                     syntax supported by that framework can be added.
                     An optional command-line program is provided.

                     Skylighting is intended to be the successor to
                     highlighting-kate.

                     This package provides generated syntax modules
                     based on the KDE XML definitions provided by the
                     @skylighting-core@ package. As a result this
                     package is licensed under the GPL.

homepage:            https://github.com/jgm/skylighting
license:             GPL-2
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
copyright:           (C) 2016 John MacFarlane
category:            Text
build-type:          Simple
extra-doc-files:     README.md
                     changelog.md

cabal-version:       1.22

source-repository head
  type:              git
  location:          https://github.com/jgm/skylighting.git

library
  exposed-modules:     Skylighting
                       Skylighting.Syntax
  reexported-modules:    skylighting-core:Skylighting.Core
                       , skylighting-core:Skylighting.Types
                       , skylighting-core:Skylighting.Regex
                       , skylighting-core:Skylighting.Parser
                       , skylighting-core:Skylighting.Styles
                       , skylighting-core:Skylighting.Tokenizer
                       , skylighting-core:Skylighting.Format.ANSI
                       , skylighting-core:Skylighting.Format.HTML
                       , skylighting-core:Skylighting.Format.LaTeX
  other-modules:
                       Skylighting.Syntax.Abc
                       Skylighting.Syntax.Actionscript
                       Skylighting.Syntax.Ada
                       Skylighting.Syntax.Agda
                       Skylighting.Syntax.Alert
                       Skylighting.Syntax.AlertIndent
                       Skylighting.Syntax.Apache
                       Skylighting.Syntax.Asn1
                       Skylighting.Syntax.Asp
                       Skylighting.Syntax.Ats
                       Skylighting.Syntax.Awk
                       Skylighting.Syntax.Bash
                       Skylighting.Syntax.Bibtex
                       Skylighting.Syntax.Boo
                       Skylighting.Syntax.C
                       Skylighting.Syntax.Changelog
                       Skylighting.Syntax.Clojure
                       Skylighting.Syntax.Cmake
                       Skylighting.Syntax.Coffee
                       Skylighting.Syntax.Coldfusion
                       Skylighting.Syntax.Commonlisp
                       Skylighting.Syntax.Cpp
                       Skylighting.Syntax.Cs
                       Skylighting.Syntax.Css
                       Skylighting.Syntax.Curry
                       Skylighting.Syntax.D
                       Skylighting.Syntax.Default
                       Skylighting.Syntax.Diff
                       Skylighting.Syntax.Djangotemplate
                       Skylighting.Syntax.Dockerfile
                       Skylighting.Syntax.Dot
                       Skylighting.Syntax.Doxygen
                       Skylighting.Syntax.Doxygenlua
                       Skylighting.Syntax.Dtd
                       Skylighting.Syntax.Eiffel
                       Skylighting.Syntax.Elixir
                       Skylighting.Syntax.Elm
                       Skylighting.Syntax.Email
                       Skylighting.Syntax.Erlang
                       Skylighting.Syntax.Fasm
                       Skylighting.Syntax.Fortran
                       Skylighting.Syntax.Fsharp
                       Skylighting.Syntax.Gcc
                       Skylighting.Syntax.Glsl
                       Skylighting.Syntax.Gnuassembler
                       Skylighting.Syntax.Go
                       Skylighting.Syntax.Hamlet
                       Skylighting.Syntax.Haskell
                       Skylighting.Syntax.Haxe
                       Skylighting.Syntax.Html
                       Skylighting.Syntax.Idris
                       Skylighting.Syntax.Ini
                       Skylighting.Syntax.Isocpp
                       Skylighting.Syntax.J
                       Skylighting.Syntax.Java
                       Skylighting.Syntax.Javadoc
                       Skylighting.Syntax.JavascriptReact
                       Skylighting.Syntax.Javascript
                       Skylighting.Syntax.Json
                       Skylighting.Syntax.Jsp
                       Skylighting.Syntax.Julia
                       Skylighting.Syntax.Kotlin
                       Skylighting.Syntax.Latex
                       Skylighting.Syntax.Lex
                       Skylighting.Syntax.Lilypond
                       Skylighting.Syntax.LiterateCurry
                       Skylighting.Syntax.LiterateHaskell
                       Skylighting.Syntax.Llvm
                       Skylighting.Syntax.Lua
                       Skylighting.Syntax.M4
                       Skylighting.Syntax.Makefile
                       Skylighting.Syntax.Mandoc
                       Skylighting.Syntax.Markdown
                       Skylighting.Syntax.Mathematica
                       Skylighting.Syntax.Matlab
                       Skylighting.Syntax.Maxima
                       Skylighting.Syntax.Mediawiki
                       Skylighting.Syntax.Metafont
                       Skylighting.Syntax.Mips
                       Skylighting.Syntax.Modelines
                       Skylighting.Syntax.Modula2
                       Skylighting.Syntax.Modula3
                       Skylighting.Syntax.Monobasic
                       Skylighting.Syntax.Mustache
                       Skylighting.Syntax.Nasm
                       Skylighting.Syntax.Noweb
                       Skylighting.Syntax.Objectivec
                       Skylighting.Syntax.Objectivecpp
                       Skylighting.Syntax.Ocaml
                       Skylighting.Syntax.Octave
                       Skylighting.Syntax.Opencl
                       Skylighting.Syntax.Pascal
                       Skylighting.Syntax.Perl
                       Skylighting.Syntax.Php
                       Skylighting.Syntax.Pike
                       Skylighting.Syntax.Postscript
                       Skylighting.Syntax.Povray
                       Skylighting.Syntax.Powershell
                       Skylighting.Syntax.Prolog
                       Skylighting.Syntax.Protobuf
                       Skylighting.Syntax.Pure
                       Skylighting.Syntax.Purebasic
                       Skylighting.Syntax.Python
                       Skylighting.Syntax.Qml
                       Skylighting.Syntax.R
                       Skylighting.Syntax.Relaxng
                       Skylighting.Syntax.Relaxngcompact
                       Skylighting.Syntax.Rest
                       Skylighting.Syntax.Rhtml
                       Skylighting.Syntax.Roff
                       Skylighting.Syntax.Ruby
                       Skylighting.Syntax.Rust
                       Skylighting.Syntax.Scala
                       Skylighting.Syntax.Scheme
                       Skylighting.Syntax.Sci
                       Skylighting.Syntax.Sed
                       Skylighting.Syntax.Sgml
                       Skylighting.Syntax.Sml
                       Skylighting.Syntax.SqlMysql
                       Skylighting.Syntax.SqlPostgresql
                       Skylighting.Syntax.Sql
                       Skylighting.Syntax.Stata
                       Skylighting.Syntax.Tcl
                       Skylighting.Syntax.Tcsh
                       Skylighting.Syntax.Texinfo
                       Skylighting.Syntax.Typescript
                       Skylighting.Syntax.Verilog
                       Skylighting.Syntax.Vhdl
                       Skylighting.Syntax.Xml
                       Skylighting.Syntax.Xorg
                       Skylighting.Syntax.Xslt
                       Skylighting.Syntax.Xul
                       Skylighting.Syntax.Yacc
                       Skylighting.Syntax.Yaml
                       Skylighting.Syntax.Zsh
  other-extensions:    CPP, Arrows
  build-depends:       base >= 4.8 && < 5.0,
                       skylighting-core == 0.8.2.1,
                       bytestring,
                       containers,
                       binary
  hs-source-dirs:      src
  ghc-prof-options:    -fprof-auto-exported
  default-language:    Haskell2010
  ghc-options:         -Wall

Flag system-pcre
  Description:   Use regex-pcre instead of regex-pcre-builtin
  Default:       False

Flag executable
  Description:   Whether to build the skylighting program
  Default:       False

executable skylighting
  build-depends:       base >= 4.8 && < 5.0,
                       filepath,
                       text,
                       pretty-show,
                       containers,
                       directory,
                       bytestring,
                       blaze-html >= 0.5,
                       skylighting
  hs-source-dirs:      bin
  main-is:             main.hs
  default-language:    Haskell2010
  other-extensions:    CPP
  ghc-options:         -Wall
  if flag(executable)
    buildable:         True
  else
    buildable:         False
  other-modules:  Paths_skylighting
